Wed Apr 18 09:06:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc-8.h:
          WinCE doesn't have intrin.h

Tue Apr 17 22:11:11 UTC 2007  Steve Huston  <shuston@riverace.com>

        * netsvcs/lib/Server_Logging_Handler_T.cpp (parse_args): When calling
          ACE_LOG_MSG->open(), get the existing logging flags and pass them
          to open() in order to preserve any previously set flags, such as
          SYSLOG, etc. Thanks to Hubert Talbot <Hubert dot Talbot at criq
          dot qc dot ca> for this fix.

Tue Apr 17 14:36:00 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * bin/tao_orb_tests.lst:

          Neither 2804 nor 2844 will run in a minimum corba or corba e
          build.

Tue Apr 17 14:25:35 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/generate_compile_stats.sh:

          Don't error out if the destination directory doesn't exist yet, the
          script will attempt to create it before using it.

Tue Apr 17 12:11:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug_2768_Regression

Tue Apr 17 11:32:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc-8.h:
        * ace/config-win32-msvc.h:
          Only msvc8 has intrin.h

Tue Apr 17 10:03:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.inl:
          Added missing pragma intrinsic

Tue Apr 17 09:55:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-icc-common.h:
          Make use of the Intel C++ intrinsic interlocked functions on
          IA64 Linux. Intel support has promised Intel will deliver these
          functions in the near feature also for IA32/EM64T.

Tue Apr 17 09:41:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_intrin.h:
          Added ACE_HAS_IA64INTRIN_H and ACE_HAS_IA32INTRIN_H for supporting
          the Intel C++ intrinsic header files
